# nonbinary

./: .gitignore  Cargo.toml  Makefile
c_test/: CMakeLists.txt  call_rust.c
src/: deserializer.rs  lib.rs
src/abi/: mod.rs
src/deserializer/: mod.rs  nonalloc.rs  test.rs
src/deserializer/nonalloc/: nonalloc_const_def.rs
