[package]
name = "nonbinary"
version = "0.0.0"
edition = "2021"
description = "(WIP) Customizable binary deserializer"
license = "MPL-2.0"
homepage = "https://github.com/CerulanLumina/nonbinary"
repository = "https://github.com/CerulanLumina/nonbinary"

[lib]
crate-type = ["lib"]

[features]
std = []
dumb-tests = []

[dependencies]

[dev-dependencies]
arrayvec = "0.7.2"